Bug 1273106 - Set the native search field's placeholder to an empty string, otherwise the default string will be shown when building with the 10.11 SDK. r=mstange.